--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "analyze": "nodemon --watch src/utils/dataAnalysis.ts --exec ts-node src/utils/dataAnalysis.ts"
   },
   "keywords": [],
   "author": "",
